--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
             background-color: rgba(0, 0, 33);
             color: white(192, 207, 227);
             font-family: 'poppins', sans-serif;
-        }
+@media only screen and(max-width:455px) {
+            .body{
+                display: flex;
+            }
+  
+}
 
         nav {
             display: flex;
