--- a/index.html
+++ b/index.html
@@ -21,12 +21,47 @@
             background-color: rgba(0, 0, 33);
             color: white(192, 207, 227);
             font-family: 'poppins', sans-serif;
-@media only screen and(max-width:455px) {
-            .body{
-                display: flex;
-            }
-  
+/* Default styles (desktop-first approach) */
+
+/* Small devices (phones, portrait) */
+@media (max-width: 600px) {
+  body {
+    font-size: 16px;
+    padding: 10px;
+  }
+  header, nav, section {
+    flex-direction: column;
+  }
+  .menu {
+    display: none; 
+  }
 }
+
+/* Medium devices (tablets) */
+@media (min-width: 601px) and (max-width: 900px) {
+  body {
+    font-size: 18px;
+    padding: 15px;
+  }
+  .sidebar {
+    display: none; /* simplify layout for tablets */
+  }
+}
+
+/* Large devices (desktops/laptops) */
+@media (min-width: 901px) {
+  body {
+    font-size: 20px;
+    padding: 20px;
+  }
+  .menu {
+    display: block;
+  }
+  .sidebar {
+    display: block;
+  }
+}
+
 
         nav {
             display: flex;
