--- a/contact.html
+++ b/contact.html
@@ -55,12 +55,10 @@
 <body>
   <div class="container">
     <h1>Contact Me</h1>
-    <form action="mailto:your.email@example.com" method="POST" enctype="text/plain">
+    <form action="mailto:Adityakumar77778888@gmail.com" method="POST" enctype="text/plain">
       <label for="name">Name</label>
       <input type="text" id="name" name="name" required>
 
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" required>
 
       <label for="message">Message</label>
       <textarea id="message" name="message" rows="6" required></textarea>
