--- a/contact.html
+++ b/contact.html
@@ -56,11 +56,11 @@
   <div class="container">
     <h1>Contact Me</h1>
     <form action="mailto:Adityakumar77778888@gmail.com" method="POST" enctype="text/plain">
-      <label for="name">Name</label>
+      <label for="name">your Name</label>
       <input type="text" id="name" name="name" required>
 
 
-      <label for="message">Message</label>
+      <label for="message">Please Type your Message</label>
       <textarea id="message" name="message" rows="6" required></textarea>
 
       <button type="submit">Send Message</button>
