--- a/index.html
+++ b/index.html
@@ -66,7 +66,16 @@
 
         .right {
             background-color: gray;
-            font-style: italic;
+            font-style: italic;width: 70%;
+           margin-left: 170px;
+            font-style: italic;       
+  height: 100px;       
+  background-color: #333; 
+  border-radius: 50px; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
         }
 
 
@@ -86,8 +95,21 @@
             }
 
             nav ul {
+                margin-right: 300px;
+                   height: 100px;      
+                   background-color: #333; 
+                   border-radius: 50px; 
+                   display: flex;
+                   justify-content: center;
+                   align-items: center;
+                   color: white;
+
 
                 flex-direction: column;
+               
+
+                             
+
 
             }
 
